This is a project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./project.css">
     <link rel="stylesheet" href="./vendors/fontawesome-free-6.6.0-web/css/all.css">
 </head>
+
 <body>
-    
+    <section id="navbar">
+        <nav class="navbar-main">
+            <div class="navbar-logo">
+                <i class="navbar-logo-icon fa-solid fa-object-ungroup fa-3x"></i>
+
+                <span class="navbar-logo-text">Website</span>
+            </div>
+            <!-- navbar logo -->
+             <ul class="navbar-menu">
+                <li class="navbar-item">
+                    <a class="navbar-link" href="">Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="navbar-link" href="">About</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="navbar-link" href="">Service</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="navbar-link" href="">Portfolio</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="navbar-link" href="">Page</a>
+                </li>
+                <li class="navbar-item">
+                    <a class="navbar-link" href="">Contact</a>
+                </li>
+                <li class="navbar-item">
+                    <button class="navbar-cta">Get Free Consultent</button>
+                </li>
+             </ul>
+        </nav>
+
+    </section>
+    <section>
+        <div class="heros-background">
+            <div class="heros-text">
+                <h3>Get Every single solutions</h3>
+                <h1>I'm Designer Haris F. Watson</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam eveniet dolore, cupiditate quas fugit quia illum aliquam perspiciatis ex amet!</p>
+                <h4></h4>
+                <div class="heros-cta-container">
+                    <button class="heros-cta heros-cta-1">Learn More</button>
+                    <button class="heros-cta heros-cta-2">Hire Me</button>
+                </div>
+            </div>
+            <div class="heros-img">
+                <img  src="./media/image.png" alt="">
+
+            </div>
+        </div>
+    </section>
+
+
 </body>
+
 </html>
