--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="navbar-logo-text">Website</span>
             </div>
             <!-- navbar logo -->
-             <ul class="navbar-menu">
+            <ul class="navbar-menu">
                 <li class="navbar-item">
                     <a class="navbar-link" href="">Home</a>
                 </li>
@@ -40,7 +40,7 @@
                 <li class="navbar-item">
                     <button class="navbar-cta">Get Free Consultent</button>
                 </li>
-             </ul>
+            </ul>
         </nav>
 
     </section>
@@ -48,8 +48,9 @@
         <div class="heros-background">
             <div class="heros-text">
                 <h3>Get Every single solutions</h3>
-                <h1>I'm Designer Haris F. Watson</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam eveniet dolore, cupiditate quas fugit quia illum aliquam perspiciatis ex amet!</p>
+                <h2>I'm Designer Haris F. Watson</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam eveniet dolore, cupiditate quas
+                    fugit quia illum aliquam perspiciatis ex amet!</p>
                 <h4></h4>
                 <div class="heros-cta-container">
                     <button class="heros-cta heros-cta-1">Learn More</button>
@@ -57,12 +58,72 @@
                 </div>
             </div>
             <div class="heros-img">
-                <img  src="./media/image.png" alt="">
+                <img src="./media/image.png" alt="">
 
             </div>
         </div>
     </section>
+    <section id="about-us">
+        <div class="about-us-container">
+            <div class="about-us-text">
+                <h1 class="d1">Designing With Passion While Exploring The World.</h1>
+                <h3 class="d1">Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna aliqua.
+                    Quis ipsum suspendisces gravida. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan
+                    lacus.</h3>
+                <p class="d1">Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="about-us-text-2">
+                <h1 class="d1">Any Type Of Query& Discussion.</h1>
+                <p class="d1">Late talk with me </p>
+                <h3 class="d1">hire@colorlib.com</h3>
+                <div class="icon">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <div class="about-img-container">
+                    <!-- <div class="image">
+                        <img src="./media/im1.png" alt="">
+                    </div> -->
+                    <img src="./media/im1.png" width="550px" height="250px">
 
+                    <div class="about-img">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, dicta?
+                        <a href="https://github.com/divyanibhusari">Github</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        
+    </section>
+    <section id="Information">
+        <div class="information-deep">
+            <h1>What Services you will <br> Get from me!</h1>
+        </div>
+       
+        <div class="box">
+            <div class="information-box-1">
+                <div class="s1"> <img src="./media/vector.png" width="100px" height="100px"></div>
+                <h2>UI/UX DESIGN</h2>
+                 <p>Free resource that will help nderstand thecv designc process and improve theroi nderstand the design process andisei impro are of vquality.</p>
+             </div>
+             <div class="information-box-2">
+                <div class="s2"> <img src="./media/microphone.png" width="100px" height="100px"></div>
+                <h2>Digital Marketing</h2>
+                 <p>Free resource that will help nderstand thecv designc process and improve theroi nderstand the design process andisei impro are of vquality.</p>
+             </div>
+
+             </div>
+             <div class="information-box-3">
+                <div class="s3"> <img src="./media/web-design.png" width="100px" height="100px"></div>
+                <h2>Website Design</h2>
+                 <p>Free resource that will help nderstand thecv designc process and improve theroi nderstand the design process andisei impro are of vquality.</p>
+             </div>
+             </div>
+        </div>
+    </section>
 
 </body>
 
