This is a master key

--- a/index.html
+++ b/index.html
@@ -177,48 +177,60 @@
     <section>
         <div class="contact-form">
            <div class="contact-form-title">
-            <h1>Dont worry for contact i`m available</h1>
+            <h1 class="contact-form-title-heading">Dont worry for contact i`m available</h1>
+           <div class="contact-form-title-button">
+             <button>Contact Me Now</button>
         </div>
-           <div class="contact-form-cta">
-            <button class="button">Contact Me Now</button>
-           </div>
         </div>
+       </div>    
     </section>
+ 
     <section>
-    <div class="p-i-box">
-        <h1>Some Possitive Feedback <br> That Encourage Us</h1>
-        <div class="p-i-container">
-            <div class="p-i-child">
-                <div class=" p-i-child-icon">
-                     <img src="./media/im2.png" alt="">
-                    <div class="p-i-circle"></div> 
+        <div class="reviews-section-container">
+            <div class="reviews-section-container-heading">
+                Some Possitive Feedback That Encourage Us
+            </div>
+            <div class="reviews-section-container-cards">
+                <div class="review-card">
+                    <div class="user-profile">
+                        <img src="./media/im.png" alt="" class="review-card-img">
+                        <div class="user-profile-data">
+                            <h4>Bhawna Bhoyar</h4>
+                            <span>UI/UX DESIGNER</span>
+                        </div>
 
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, deserunt!
+                        temporibus aut! </p>
                 </div>
-                <h2 class="p-i-title">UI/UX DESIGN</h2>
-                <p class="p-i-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quis corrupti, cumque facere illum placeat provident quaerat doloremque amet, enim hic quia officiis minus? Alias voluptatibus harum ratione quis.</p>
-            </div>    
-                <div class="p-i-child">
-                    <div class=" p-i-child-icon">
-                        <img src="./media/im.png" alt="">
-                       <div class="p-i-circle"></div> 
-   
-                   </div>
-                   <h2 class="p-i-title">UI/UX DESIGN</h2>
-                   <p class="p-i-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos dolorem porro doloribus eligendi placeat consequuntur repellat, quod qui assumenda at ipsa impedit perspiciatis architecto vero! Sunt id rerum nostrum!</p>
+                <div class="review-card">
+                    <div class="user-profile">
+                        <img src="./media/im2.png" alt="" class="review-card-img">
+                        <div class="user-profile-data">
+                            <h4>Yash shriwas</h4>
+                            <span>Mobile Developer</span>
+                        </div>
+
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure
+                        temporibus aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, vitae dolores?</p>
                 </div>
-                <div class="p-i-child">
-                    <div class=" p-i-child-icon">
-                        <img  src="./media/im2.png" alt="">
-                       <div class="p-i-circle"></div> 
-   
-                   </div>
-                   <h2 class="p-i-title">UI/UX DESIGN</h2>
-                   <p class="p-i-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae aliquid ex quaerat? Quia, sed! Amet illo alias blanditiis laborum neque optio voluptatibus quo odit, laboriosam ipsa in hic nulla.</p>
+                <div class="review-card">
+                    <div class="user-profile">
+
+                        <img src="./media/im3.png" alt="" class="review-card-img">
+
+                        <div class="user-profile-data">
+                            <h4>Prashant Golhar</h4>
+                            <span>Web Developer</span>
+                        </div>
+
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure
+                        temporibus aut! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, fugit.</p>
                 </div>
-               
-            
+            </div>
         </div>
-    </div>
     </section>
 </body>
 
