--- a/dkl.html
+++ b/dkl.html
@@ -156,3 +156,39 @@ css
     font-weight: 500;
     color: rgba(0,0,0,0.7);
 }
+.contact-section{
+    padding: calc(4rem + var(--padding-y)) calc(3rem + var(--padding-x));
+    /* width: 100%; */
+    height: 200px;
+    background: linear-gradient(rgba(119, 67, 219,0.5),rgba(119, 67, 219,0.5)) , url("./media/background.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.contact-section-container{
+    /* width: 100%; */
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contact-section-container h1{
+    color: white;
+    font-size: 3.5rem;
+}
+
+.contact-section-container-child-1, .contact-section-container-child-2{
+    flex-grow: 1;
+}
+
+.contact-section-container button{
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    font-weight: bolder;
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    border-radius: 14px;
+}
