This is a space

--- a/index.html
+++ b/index.html
@@ -232,6 +232,22 @@
             </div>
         </div>
     </section>
+    <section id="form">
+        <div class="feedbackform">
+            <h1>If Not Now, When? Let’s Work Together!</h1>
+            <p>Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore  et dolore magna aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra</p>
+            <img src="https://preview.colorlib.com/theme/personalportfolio/assets/img/gallery/sin.png" alt="">
+        </div>
+        <div class="F-form">
+            <form action="">
+                <input type="text" placeholder="FULL NAME">
+               
+                <input type="text" placeholder="Email Address">
+                <input class="i1" type="text" placeholder="Your Message">
+                <button>Send Message</button>
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
