This is a project

--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@
         </div>
     </section><br><br><br>  
     <section class="footer">
+        <div class="f-h1">
+            <img src="https://preview.colorlib.com/theme/personalportfolio/assets/img/logo/logo2_footer.png" alt="">
+        </div>
         
         <div class="footer-parent">
             <h1>
@@ -256,7 +259,8 @@
             </h1>
            
             <div class="footer-child">
-                <p>221B Baker Street, Post office Box 352345 <br> Park Road, USA - 215431</p>
+                <p>221B Baker Street, Post office Box 352345 </p>
+                <span>Park Road, USA - 215431</span>
             </div>
         </div>
         <div class="f-p-child-2">
@@ -265,7 +269,7 @@
             </div>
             <div class="f-p-c-2">
                 Stay Connected  
-                <i class= "f-p-c-i fa-brands fa-facebook"></i> 
+                <i class= "f-p-c-i fa-brands fa-facebook "></i> 
                 <i class="f-p-c-i fa-brands fa-twitter"></i>
                 <i class="f-p-c-i fa-solid fa-phone"></i>
                 <i class="f-p-c-i fa-brands fa-youtube"></i>
