--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         </div>
 
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, deserunt!
+                    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, deserunt!
                         temporibus aut! </p>
                 </div>
                 <div class="review-card">
@@ -212,7 +212,7 @@
                         </div>
 
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure
+                    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure
                         temporibus aut! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, vitae dolores?</p>
                 </div>
                 <div class="review-card">
@@ -226,7 +226,7 @@
                         </div>
 
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure
+                    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veritatis, ratione nihil iure
                         temporibus aut! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, fugit.</p>
                 </div>
             </div>
@@ -279,6 +279,7 @@
             </div>
         </div>
     </section>
+    
 </body>
 
 </html>
